# engineer_cv

./: .gitignore  README.md
eng_ws/scripts/color_icp/: colored_icp.py
eng_ws/scripts/color_icp_py/: colored_icp.py
eng_ws/scripts/rs/: record.py  tf.py  ts.py
eng_ws/scripts/rs/config/: camera_info.yaml
eng_ws/scripts/sam_4_eng/: .gitignore  corb.py  maskpub.py  sam.py
eng_ws/src/color_icp/: CMakeLists.txt  package.xml
eng_ws/src/color_icp/config/: params.yaml
eng_ws/src/color_icp/include/color_icp/: config.hpp  remove_nan.h
eng_ws/src/color_icp/launch/: color_icp.launch.py
eng_ws/src/color_icp/src/: color_icp.cpp
eng_ws/src/open3d_ts/ts1/: CMakeLists.txt
eng_ws/src/open3d_ts/ts1/src/: color_icp_o3d.cpp
eng_ws/src/open3d_ts/ts2/: CMakeLists.txt  package.xml
eng_ws/src/open3d_ts/ts2/src/: ts2.cpp
eng_ws/src/realsense2_camera_msgs/: CMakeLists.txt
eng_ws/src/rgbd_point_info/: CMakeLists.txt  package.xml
eng_ws/src/rgbd_point_info/config/: camera_info.yaml
eng_ws/src/rgbd_point_info/include/rgbdp_info/: rgbdp_info.hpp
eng_ws/src/rgbd_point_info/launch/: camera_launch.py  rgbdp_launch.py
eng_ws/src/rgbd_point_info/src/: camerats.cpp  rgbdp_info.cpp
eng_ws/src/ros2_driver/: CMakeLists.txt  package.xml
eng_ws/src/ros2_driver/launch/: engineer_detector.launch.py
eng_ws/src/ros2_driver/src/: ros2_driver.cpp
